fix overflow

--- a/styles/static-css/modals.css
+++ b/styles/static-css/modals.css
@@ -126,11 +126,9 @@
   border: 2px solid #000;
   box-shadow: 24;
   padding: 0 1rem 1rem 1rem;
-  overflow: auto;
+  overflow: auto !important;
   display: flex;
   flex-direction: column;
-  /* justify-content: flex-start; */
-  /* border: 2px solid red; */
 }
 .mod_user_content {
   display: flex;
@@ -139,8 +137,7 @@
   row-gap: 8px;
   padding: 0;
   width: 100%;
-  /* margin-top: 15px; */
-  height: 100% !important;
+  /* height: 100% !important; */
 }
 .mod_user_inputgroup {
   width: 100%;
